--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
 </head>
 
 <body>
-    
+
     <nav class="nav justify-content-center">
         <a class="nav-link" href="addbook">Add book</a>
         <a class="nav-link" href="viewbook">View book</a>
-   </nav>
-    
+    </nav>
+
     <div class="container">
         <div class="row d-flex justify-content-center p-5">
-            <div class="col-6 p-5" id="addbook">
+            <div class="col-sm-12 col-lg-6 p-5" id="addbook">
                 <h1>Add book</h1>
                 <form>
                     <div class="form-group">
@@ -35,17 +35,15 @@
                         <input type="text" class="form-control" id="ISBN" placeholder="ISBN#">
                     </div>
                     <button type="submit" class="btn btn-info" id="submitBook">Submit</button>
-                    <div class="alert alert-danger text-center mt-3" id="bookDanger" role="alert">
+                    <div class="text-center text-danger" id="bookDanger" role="salert">
                         Please fill in all fields!
                     </div>
-                    <div class="alert alert-success text-center mt-3" id="bookSuccess" role="alert">
+                    <div class="text-center text-success" id="bookSuccess" role="alsert">
                         This is a success
                     </div>
                 </form>
             </div>
-        </div>
-        <div class="row d-flex justify-content-center">
-            <div class="col-10" id="viewbook">
+            <div class="col-12 " id="viewbook">
                 <table class="table">
                     <thead>
                         <tr>
